<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24dp"
            android:textStyle="bold"
            style="@style/StarSignTextView"
            android:text="@string/star_signs"
            />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerVertical"
            />

        <TextView
            android:id="@+id/aquarius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/aquarius"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerVertical"
            />

        <TextView
            android:id="@+id/pisces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/pisces"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerVertical"
            />

        <TextView
            android:id="@+id/aries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/aries"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerVertical"
            />

        <TextView
            android:id="@+id/taurus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/taurus"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerVertical"
            />

        <TextView
            android:id="@+id/genimi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/gemini"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerVertical"
            />

        <TextView
            android:id="@+id/cancer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/cancer"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerVertical"
            />

        <TextView
            android:id="@+id/leo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/leo"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerVertical"
            />

        <TextView
            android:id="@+id/virgo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/virgo"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerVertical"
            />

        <TextView
            android:id="@+id/libra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/libra"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerVertical"
            />

        <TextView
            android:id="@+id/scorpio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/scorpio"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerVertical"
            />

        <TextView
            android:id="@+id/sagittarius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/sagittarius"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerVertical"
            />

        <TextView
            android:id="@+id/capricorn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/capricorn"
            />

    </LinearLayout>

</ScrollView>